April 21, 2004

	add bc, units, mtime, primes, news

	add registers to acid stack traces

	add acid man page (forgotten before)

	add proper support for long names in archives to mk
	change mksyslib, mklib to use mk's magic archive powers

	add jpg, map, pr, p.

	rename Bwait to E (thanks to rob for the name).

	add -m flag to mkdir

	fix acid's handling of infinite includes

	rename yacc to 9yacc so that we can be sure to find it.

	stop malloc'ing in signal handlers.
	in fact, stop locking anything.

	add rfork(RFNOWAIT) support.  

	add libsunrpc.

	back out funny graphics in 9term menu.

	import assembler routines for libmp and libsec
		on x86 from william josephson's tree

	add truerand which uses /dev/random to seed PRG

	add aescbc, astro, lex, and tcs

	import man9 from william josephson's version of the port

April 20, 2004

	make 9term handle \r kind of.

April 19, 2004

	lots of man page updates.

	fix bug in comm, reported by Taj Khattra.

	add libmach, db, acid

April 18, 2004

	add utf-8 input support from david tolpin.

	pick up rog's acme fixes w.r.t. cut and paste

	small fixes to ps, B, web

	more types in u.h

	man page nits

	make gzip, bzip2 work with gnu tar

	add fmt, tweak

	change misc/ding checkboxes to be smaller


April 17, 2004

	make 9term work a bit better w.r.t. terminal modes

April 14, 2004

	add look.  thanks to Taj Khattra.
	add plot, graph.  thanks to Taj Khattra.
	add gzip, bzip2.  thanks to Taj Khattra.

April 8, 2004

	speed up ls

	import htmlfmt from wkj

April 5, 2004

	Fixes to rio from Axel.

	Add atoll, etc.

April 2, 2004

	Add missing unsharps to dict.  Reported by Robby (plan9@blueyonder)

March 30, 2004

	Change label to use nawk on SunOS.

	Change libdraw to elide mouse motion events when they
		pile up.
	
March 29, 2004

	Add window resizing by dragging borders to rio.
	Code from Axel Belinfante.

	Added code to make 9term fade itself when it loses
	focus running under rio.

March 26, 2004
